<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_completo"
        android:padding="10sp"
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:background="#A5A3AC"
    	
    	>
    	
        <RelativeLayout
        android:id="@+id/cuadro_interaccion"
        android:layout_marginTop="10dp"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	>
        
    	<TextView
            android:id="@+id/nombre_contacto_es"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/nombre_contacto_es"
            
            android:textColor="#EAEBEE"
            />
    	
		<EditText 
            android:id="@+id/nombre_contacto"
            android:gravity="center_horizontal"
            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            android:layout_below="@id/nombre_contacto_es"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic"
            android:hint="@string/hint_nombre_contacto"
            android:background="#EAEBEE"
            android:textColor="#545260"
            android:inputType="textCapWords"
            />
		
		<TextView
            android:id="@+id/cuenta_sip_es"
            
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nombre_contacto"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/cuenta_sip_es"
            
            android:textColor="#EAEBEE"
            
            />
    	
		<EditText 
            android:id="@+id/cuenta_sip"
            
            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/cuenta_sip_es"            
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic"
            android:hint="@string/hint_cuenta_sip"
            android:background="#EAEBEE"
            android:textColor="#545260"
            />
		
		<Button
		    android:id="@+id/boton_aceptar_contacto"
		    
		    android:background="@drawable/boton_gris_2"
		   	android:textColor="@color/grisOscuro"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:gravity="center"
	        android:layout_centerHorizontal="true"
		    
            
            android:layout_marginTop="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_below="@id/cuenta_sip"
            
            android:text="@string/aceptar_contacto"
            android:onClick="clickSIPAceptarContacto"
            />

		</RelativeLayout>		
</RelativeLayout>
